--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,6 +34,8 @@ jobs:
       uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
     - name: Grant execute permission for Gradle Wrapper
       run: chmod +x ./gradlew
+    - name: Run tests
+      run: ./gradlew test
     - name: Build with Gradle Wrapper
       run: ./gradlew build
 
